# cribbage-zero

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  setup.sh  test.sh
pgn/: game.pgn  game2.pgn
src/: CMakeLists.txt  board.c  board.cpp  board.h  card.cpp  card.h  card_container.h  cards.c  cards.h  core.h  cribbage.c  cribbage.h  cribbage_core.h  cribbage_scoring.c  cribbage_scoring.h  deck.cpp  deck.h  discard.c  discard.h  discard_table.c  discard_table.h  gen_stats.c  gen_stats.h  generate_crib_statistics.cpp  generate_crib_statistics.h  generate_statistics.cpp  generate_statistics.h  hand.cpp  hand.h  hash_map.c  hash_map.h  main.c  main.cpp  player.cpp  player.h  player_input.c  player_input.h  random.h  scoring.cpp  scoring.h  (+2 more)
src/app/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt
src/cli/include/: ParseCommandLineArgs.h  cli.h  help.h
src/cli/src/: ParseCommandLineArgs.cpp  cli.cpp
src/cribbage_core/: CMakeLists.txt
src/cribbage_core/include/: board.h  card.h  card_container.h  card_pile.h  core.h  cribbage.h  deck.h  game.h  game_pgn.h  generate_statistics.h  hand.h  player.h  scoring.h  statistics.h
src/cribbage_core/include/pgn/: game_pgn.h  pgn_stats.h
src/cribbage_core/include/statistics/: generate_statistics.h  stat_enums.h  statistics.h
src/cribbage_core/include/statistics/generator/: Crib.h  Discard.h  DiscardHeuristics.h
src/cribbage_core/include/statistics/stats/: AllDiscardsStatistics.h  CribDiscardProbabilities.h  DiscardHeuristics.h  DiscardStatistics.h  ScoreDistributionTable.h  StatisticsTable.h
src/cribbage_core/include/util/: parse.h  save_load.h
src/cribbage_core/src/: board.cpp  card.cpp  card_pile.cpp  cribbage.cpp  deck.cpp  game.cpp  game_pgn.cpp  generate_statistics.cpp  hand.cpp  player.cpp  scoring.cpp  statistics.cpp
src/cribbage_core/src/pgn/: game_pgn.cpp  pgn_stats.cpp
src/cribbage_core/src/statistics/generator/: Crib.cpp  Discard.cpp  DiscardHeuristics.cpp
src/cribbage_core/src/statistics/stats/: AllDiscardsStatistics.cpp  CribDiscardProbabilities.cpp  DiscardHeuristics.cpp  DiscardStatistics.cpp  ScoreDistributionTable.cpp  StatisticsTable.cpp
src/cribbage_core/src/util/: parse.cpp  save_load.cpp
src/cribbage_tests/: CMakeLists.txt  CardTest.cpp  DeckTest.cpp
src/random/: CMakeLists.txt
src/random/include/: cribbage_random.h
src/random/src/: cribbage_random.cpp
src/util/: cribbage_random.cpp  cribbage_random.h
src/utils/: random.c
tables/: freq_table_v2_low_depth.txt  online_mean_table.txt
tables/crib/: freq_table.txt  mean_table.txt  std_dev_table.txt  variance_table.txt
tables/crib_test/: freq_table.txt  mean_table.txt  median_table.txt  std_dev_table.txt  variance_table.txt
tables/online/: std_dev_table.txt
tables/random/: freq_table.txt  mean_table.txt  median_table.txt
tables/schell/: mean_table.txt  variance_table.txt
tables/stat_vs_stat/: median_table.txt  std_dev_table.txt
tables/stat_vs_stat(cards_count bug)/: freq_table.txt  mean_table.txt  median_table.txt  variance_table.txt
tables/stat_vs_stat(run bug)/: freq_table.txt  max_table.txt  mean_table.txt  variance_table.txt
tables/stat_vs_stat_v1/: freq_table.txt  max_table.txt  mean_table.txt  median_table.txt  std_dev_table.txt
tables/stat_vs_stat_v2/: freq_table.txt  mean_table.txt  median_table.txt  min_table.txt  std_dev_table.txt  variance_table.txt
txt/: discard_table.txt  discard_table_AI_AI_v1.0.txt  hash_map.txt  hash_scoring_info.txt
